welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:6: error: ')' expected but 'else' found.
  else if(outsideMode==false && p<6){
  ^